@@ -1000,7 +1000,10 @@ handleTextFieldKeyPress(TextField *tPtr, XEvent *event)
     int cancelSelection = 1;
     Bool shifted, controled, modified;
     Bool relay = True;
+    WMScreen *scr = tPtr->view->screen;
 
+    event->xkey.state &= ~scr->ignoredModifierMask;
+    
     /*printf("(%d,%d) -> ", tPtr->selection.position, tPtr->selection.count);*/
     if (((XKeyEvent *) event)->state & WM_EMACSKEYMASK)
 	control_pressed = 1;
